--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
   background-image: url(images/space.jpg);
   color: yellow;
   font-family: sans-serif;
-  font: helvetica;
   display: flex;
   justify-content: center;
 }
@@ -11,4 +10,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: black;
+
 }
